--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,9 @@
 
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900");
+@import url('https://fonts.googleapis.com/css?family=Noticia+Text');
+@import url('https://fonts.googleapis.com/css?family=Lora');
+@import url('https://fonts.googleapis.com/css?family=Faustina')
 /* ----------------Text Fonts ------------------- */
 .count-class{
   display: inline-block;
@@ -9,6 +12,67 @@
 #timer {
   display: inline-block;
   width: 100%;
+}
+.team-heading{
+  font-family: 'Noticia Text', serif;
+  margin: 2em auto;
+  font-size: 5em;
+  line-height: 1em;
+  color: #000;
+}
+.team
+ul.social-buttons li a {
+  display: block;
+  background-color: #222;
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  font-size: 20px;
+  line-height: 40px;
+  color: #fff;
+  outline: 0;
+}
+.team-subheading{
+  font-size: 5;
+  color: gray;
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+}
+.team-name{
+  /* font-family: 'Lora',serif; */
+  font-family: 'Faustina', serif;
+  font-weight: normal;
+}
+.team-member{
+  width:400px;
+  margin: 35px;
+  padding: 10px;
+  position: relative;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  transition: all 0.3s ease-in-out;
+}
+.team-member::after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  border-radius: 5px;
+  box-shadow:  1 5px 15px rgba(0,0,0,0.3);
+  transition: opacity 0.3s ease-in-out;
+}
+.team-member:hover {
+  transform: scale(1.1, 1.1);
+  box-shadow: 5px 10px #999999;
+}
+.team-member:hover::after {
+  opacity: 1;
+}
+.list-inline {
+  padding-left: 0;
+  margin-left: -5px;
+  list-style: none;
 }
 body {
   font-size: 14px;
@@ -122,7 +186,7 @@ ul.nosyely_list {
   padding: 10px 0;
   font-size: 36px;
 }
-.section_title .title:before {
+.section_title .cover_slidertitle:before {
   width: 30px;
   content: " ";
   position: absolute;
@@ -2188,7 +2252,7 @@ Cover
 }
 
 .cover_slider .active .slider_content .slider-content-inner * .cover-title {
-  opacity: 1;
+  opacity: 5;
   -webkit-transform: translateY(0px);
   transform: translateY(0px);
   -webkit-transition: all 0.4s 300ms ease-in-out;
