--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,6 +34,7 @@
 .count-class{
   display: inline-block;
   margin : 30px 30px;
+  background-color: hsla(0,0%,64%, 0.4)
 }
 #timer {
   display: inline-block;
@@ -160,12 +161,12 @@ ul.nosyely_list {
   text-align: center;
 }
 
-.countdown div {
+.counter{
   margin: 20px;
   display: inline-block;
   padding: 25px;
   min-width: 120px;
-  background-color: #F44336;
+  background-color: hsla(0,85%, 50%, 0.8);
   color: #ffffff;
   font-size: 48px;
   font-weight: 600;
@@ -180,22 +181,22 @@ ul.nosyely_list {
 }
 
 #days {
-  font-size: 50px;
-  color: #db4844;
+  font-size: 44px;
+  color: #;
 }
 
 #hours {
-  font-size: 50px;
+  font-size: 44px;
   color: #f07c22;
 }
 
 #minutes {
-  font-size: 50px;
+  font-size: 44px;
   color: #f6da74;
 }
 
 #seconds {
-  font-size: 50px;
+  font-size: 44px;
   color: #abcd58;
 }
 
