--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,9 +5,65 @@
 @import url('https://fonts.googleapis.com/css?family=Lora');
 @import url('https://fonts.googleapis.com/css?family=Faustina');
 /* ----------------Text Fonts ------------------- */
+@media only screen and (max-width:1300px) {
+  .rounded-circle {
+    height: 108px !important;
+  }
+  .website-only-visible{
+    display: none !important;
+  }
+}
+@media only screen and (min-width: 1300px){
+  .mobile-only-visible{
+    display: none !important;
+  }
+}
+.committee-logo-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 #timer {
   display: inline-block;
   width: 100%;
+}
+.committee-header{
+  margin-top: 1em;
+}
+/* .committees-title h3 {
+  width: 30px;
+  content: " ";
+  position: absolute;
+  border-top: solid 3px #f50136;
+  border-top-width: 3px;
+  border-top-style: solid;
+  border-top-color: rgb(245, 1, 54);
+  left: 0;
+  top: 0;
+} */
+.committees-title{
+  font-size: 36px;
+  padding: 10px 0;
+}
+.committees-title h3 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  color:white;
+  line-height: 1.3;
+  margin-left: 300px;
+  margin-bottom: 50px;
+}
+.committees-title h3:before {
+  width: 30px;
+  content: " ";
+  position: absolute;
+  border-top: solid 3px #f50136;
+  left: 0;
+  top: 0;
+}
+.center-block{
+  display: table;
+  margin: auto;
 }
 
 .count-class{
@@ -243,7 +299,7 @@ ul.nosyely_list {
  width: 108px;
 }
 .letter-para-text{
-  font-size:15px;
+  font-size:20px;
   line-height: 2em;
   color: #000;
   word-spacing: 0.25em;
@@ -281,7 +337,9 @@ ul.nosyely_list {
   background-position: center center;
   position: relative;
 }
-
+.committee-container{
+  padding: 2em;
+}
 .bg-img .overlay_dark {
   position: absolute;
   top: 0;
@@ -291,8 +349,9 @@ ul.nosyely_list {
 }
 .committees-text{
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 2em;
+  font-size: 1%;
   color: white;
+  line-height: 2em;
 }
 
 .brand_item {
