--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,6 +66,7 @@
   margin: auto;
 }
 
+
 .count-class{
   display: inline-block;
   margin : 30px 30px;
@@ -76,7 +77,7 @@
 .team-heading{
   font-family: 'Noticia Text', serif;
   margin: 2em auto;
-  font-size: 5em;
+  font-size: 2%;
   line-height: 1em;
   color: #000;
 }
@@ -97,7 +98,6 @@ ul.social-buttons li a {
   outline: 0;
 }
 .team-subheading{
-  font-size: 5;
   color: gray;
   text-transform: uppercase;
   letter-spacing: 0.5em;
@@ -108,12 +108,13 @@ ul.social-buttons li a {
   font-weight: normal;
 }
 .team-member{
-  width:400px;
-  margin: 35px;
+  width:80% !important ;
   padding: 10px;
   position: relative;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  box-shadow: 0 1px 2px rgba(0,0,0,1);
   transition: all 0.3s ease-in-out;
+  margin-left: 10%;
+  margin-bottom: 2%;
 }
 .team-member::after {
   content: '';
@@ -123,7 +124,7 @@ ul.social-buttons li a {
   height: 100%;
   opacity: 0;
   border-radius: 5px;
-  box-shadow:  1 5px 15px rgba(0,0,0,0.3);
+  box-shadow:  1 5px 15px rgba(0,0,0,1);
   transition: opacity 0.3s ease-in-out;
 }
 .team-member:hover {
@@ -146,6 +147,7 @@ body {
   color: #838383;
   font-style: normal;
   overflow-x: hidden;
+  width: 100%;
 }
 
 h1,
