--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,11 @@
     display: none !important;
   }
 }
+@media only screen and (max-width:1300px) {
+  .team-image {
+    height: 150px !important;
+  }
+}
 .committee-logo-text{
   display: flex;
   flex-direction: column;
@@ -85,18 +90,6 @@
   display: inline-block;
   margin : 30px 30px;
 }
-.team
-ul.social-buttons li a {
-  display: block;
-  background-color: #222;
-  height: 40px;
-  width: 40px;
-  border-radius: 100%;
-  font-size: 20px;
-  line-height: 40px;
-  color: #fff;
-  outline: 0;
-}
 .team-subheading{
   color: gray;
   text-transform: uppercase;
@@ -114,7 +107,9 @@ ul.social-buttons li a {
   box-shadow: 0 1px 2px rgba(0,0,0,1);
   transition: all 0.3s ease-in-out;
   margin-left: 10%;
-  margin-bottom: 2%;
+  margin-bottom: 20%;
+  margin-top: 5%;
+  background-color: white;
 }
 .team-member::after {
   content: '';
@@ -441,7 +436,7 @@ blockquote p {
 
 .text-muted {
   color: #868e96 !important;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 2.1;
 }
 
