--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,8 @@
 @import url('https://fonts.googleapis.com/css?family=Noticia+Text');
 @import url('https://fonts.googleapis.com/css?family=Lora');
 @import url('https://fonts.googleapis.com/css?family=Faustina');
+@import url('https://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Merriweather');
 /* ----------------Text Fonts ------------------- */
 @media only screen and (max-width:1300px) {
   .rounded-circle {
@@ -22,6 +24,48 @@
   .team-image {
     height: 150px !important;
   }
+}
+.visible-on-hover{
+  visibility: hidden;
+}
+.visible-on-hover:hover{
+  visibility: visible;
+}
+
+.slideanim {
+  visibility:hidden;
+  visibility:visible\9;/*For old IE browsers IE6-8 */
+}
+.slideanim.slide {                  
+  visibility: visible;                  
+  animation: slide 1s;
+}
+.slideanim::after {
+  /* useful when its child elements are float:left; */
+  content: "";
+  display: table;
+  clear: both;
+}
+@keyframes slide {
+  0% {
+      opacity: 0;
+      transform: translateY(50%);
+  } 
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  } 
+}
+ ul.social-buttons  li   a {
+  display: inline-block;
+  background-color: #222;
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  font-size: 20px;
+  line-height: 40px;
+  color: #fff;
+  outline: 0;
 }
 .committee-logo-text{
   display: flex;
@@ -51,7 +95,7 @@
   padding: 10px 0;
 }
 .committees-title h3 {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Noticia Text', serif;
   font-weight: 700;
   color:white;
   line-height: 1.3;
@@ -66,10 +110,16 @@
   left: 0;
   top: 0;
 }
+.committee-para-text{
+  font-size: 18px;
+  line-height: 1.5em;
+  word-spacing: 0.5em;
+}
 .center-block{
   display: table;
   margin: auto;
 }
+
 
 
 .count-class{
@@ -291,15 +341,22 @@ ul.nosyely_list {
   position: relative;
   z-index: 1;
 }
-.committees-logos{
+.committees-logos{  
  height: 108px;
  width: 108px;
 }
+.letter-title{
+  font-family: 'Noticia Text', serif;
+  font-size: 36px;
+  font-weight: 200;
+}
 .letter-para-text{
-  font-size:15px;
-  line-height: 2em;
-  color: #000;
+  font-size:19px;
+  line-height: 1.375em;
+  color: #303030;
   word-spacing: 0.25em;
+  font-weight: 400;
+  font-family: 'Lato', sans-serif
 }
 .letter-para-heading{
   font-size: 24px;
