--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,11 @@
 @import url('https://fonts.googleapis.com/css?family=Faustina');
 @import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://fonts.googleapis.com/css?family=Merriweather');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text');
+
 /* ----------------Text Fonts ------------------- */
+
 @media only screen and (max-width:1300px) {
   .rounded-circle {
     height: 108px !important;
@@ -24,6 +28,11 @@
   .team-image {
     height: 150px !important;
   }
+}
+.navbar-heading{
+  color: white;
+  font-size: 24px;
+  font-family: 'Crimson Text', serif;
 }
 .visible-on-hover{
   visibility: hidden;
@@ -79,17 +88,7 @@
 .committee-header{
   margin-top: 1em;
 }
-/* .committees-title h3 {
-  width: 30px;
-  content: " ";
-  position: absolute;
-  border-top: solid 3px #f50136;
-  border-top-width: 3px;
-  border-top-style: solid;
-  border-top-color: rgb(245, 1, 54);
-  left: 0;
-  top: 0;
-} */
+
 .committees-title{
   font-size: 36px;
   padding: 10px 0;
@@ -2182,6 +2181,9 @@ footer .newsletter_form .form-control {
   box-shadow: 0 0 0 rgba(0, 0, 0, 0);
 }
 
+.btn-xs {
+  padding: 5px 10px;
+}
 .btn-sm {
   padding: 10px 20px;
 }
