--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,7 @@
     height: 150px !important;
   }
 }
+
 .navbar-heading{
   color: white;
   font-size: 24px;
@@ -2212,8 +2213,8 @@ footer .newsletter_form .form-control {
 }
 
 .btn-primary {
-  background-color: #f50136;
-  border: solid 1px #f50136;
+  background-color: #000;
+  border: solid 1px #000000;
   color: #ffffff;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
