delted extra stuff. updated to https config. favicon bug fixed. og image and og title added.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -419,6 +419,13 @@ ul.nosyely_list {
   color: #abcd58;
 }
 
+.bottom-right{
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+  size: 16px;
+}
+
 .bg-img {
   border-radius: 4px;
   background-size: cover;
